apps/terraria/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terraria-server
  namespace: terraria
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: terraria
  ports:
    - name: game
      port: 7777
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: terraria-makoto-server
  namespace: terraria
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: terraria-makoto
  ports:
    - name: game
      port: 7779
      protocol: TCP
