apps/terraria/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: terraria
  namespace: terraria
spec:
  endpointSelector:
    matchLabels:
      app: terraria
  ingress:
    # vmagent scrapes the GameOps toolkit's /metrics (SPEC/monitoring-stack.md).
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports: [{ port: "9110", protocol: TCP }]
    - fromEntities: [world, remote-node]
      toPorts:
        - ports: [{ port: "7777", protocol: TCP }]
    - fromEndpoints:
        - matchLabels:
            app: playit
            k8s:io.kubernetes.pod.namespace: playit
      toPorts:
        - ports: [{ port: "7777", protocol: TCP }]
  # terraria.org (update check and server downloads) and Discord.
  egress:
    - toEntities: [world]
      toPorts:
        - ports: [{ port: "443", protocol: TCP }]
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: terraria-makoto
  namespace: terraria
spec:
  endpointSelector:
    matchLabels:
      app: terraria-makoto
  ingress:
    # vmagent scrapes the GameOps toolkit's /metrics (SPEC/monitoring-stack.md).
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports: [{ port: "9110", protocol: TCP }]
    - fromEntities: [world, remote-node]
      toPorts:
        - ports: [{ port: "7779", protocol: TCP }]
    - fromEndpoints:
        - matchLabels:
            app: playit
            k8s:io.kubernetes.pod.namespace: playit
      toPorts:
        - ports: [{ port: "7779", protocol: TCP }]
  # terraria.org (update check and server downloads) and Discord.
  egress:
    - toEntities: [world]
      toPorts:
        - ports: [{ port: "443", protocol: TCP }]
